--- a/client/src/App.css
+++ b/client/src/App.css
@@ -27,3 +27,35 @@ body {
   margin: 0 auto;
   padding: 20px;
 }
+
+.typewriter {
+  color: #fff;
+  font-family: monospace;
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: 0.15em solid rgb(74 222 128); /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+
+  letter-spacing: 0.15em; /* Adjust as needed */
+  animation: typing 4.5s steps(30, end), blink-caret 0.5s step-end infinite;
+}
+
+/* The typing effect */
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: rgb(74 222 128);
+  }
+}
