--- a/client/src/App.css
+++ b/client/src/App.css
@@ -84,6 +84,10 @@ h5 {
 }
 
 @media screen and (min-width: 375px) and (max-width: 426px) {
+  .landing-page-container {
+    margin-left: 50px;
+  }
+
   .project-header {
     display: grid;
   }
@@ -95,7 +99,19 @@ h5 {
   .project-description {
     display: none;
   }
+  .addressAnsEmail-contact {
+    display: none;
+  }
+  .skills-icons {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+  }
   .skill-title {
     display: none;
+  }
+  .map {
+    width: 220px;
+    height: 40px;
+    margin: 0 auto;
   }
 }
