--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,6 +6,22 @@
 
 body {
   font-family: "Exo", sans-serif;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow: hidden;
+  background-image: radial-gradient(
+    circle farthest-side at var(--x, 100px) var(--y, 100px),
+    #1250aa 0%,
+    transparent 100%
+  );
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+main {
+  overflow-y: auto;
+  height: 100vh;
 }
 
 .hero {
@@ -16,9 +32,8 @@ body {
     #1250aa 0%,
     transparent 100%
   );
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 .component-wrapper {
@@ -30,14 +45,13 @@ body {
 .typewriter {
   color: rgb(74 222 128);
   font-family: monospace;
-  overflow: hidden; /* Ensures the content is not revealed until the animation */
-  border-right: 0.15em solid rgb(74 222 128); /* The typwriter cursor */
-  white-space: nowrap; /* Keeps the content on a single line */
-  letter-spacing: 0.15em; /* Adjust as needed */
+  overflow: hidden;
+  border-right: 0.15em solid rgb(74 222 128);
+  white-space: nowrap;
+  letter-spacing: 0.15em;
   animation: typing 4.5s steps(30, end), blink-caret 0.5s step-end infinite;
 }
 
-/* The typing effect */
 @keyframes typing {
   from {
     width: 0;
@@ -47,7 +61,6 @@ body {
   }
 }
 
-/* The typewriter cursor effect */
 @keyframes blink-caret {
   from,
   to {
@@ -82,8 +95,12 @@ h3 {
 h5 {
   font-family: "Pixelify Sans", sans-serif;
 }
+.contact-title {
+  width: fit-content;
+  margin: 0 auto;
+}
 
-@media screen and (min-width: 320px) and (max-width: 426px) {
+@media screen and (min-width: 375px) and (max-width: 426px) {
   .landing-page-container {
     margin-left: 50px;
   }
@@ -99,9 +116,7 @@ h5 {
   .project-description {
     display: none;
   }
-  .addressAnsEmail-contact {
-    display: none;
-  }
+
   .skills-icons {
     display: grid;
     grid-template-columns: auto auto auto auto;
@@ -113,5 +128,43 @@ h5 {
     width: 220px;
     height: 40px;
     margin: 0 auto;
+  }
+  .addressAnsEmail-contact {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 300px) and (max-width: 374px) {
+  #about {
+    margin-top: 50px;
+    margin-right: 50px;
+    width: 70%;
+  }
+
+  #skills {
+    margin-top: 50px;
+    margin-right: 50px;
+    width: 70%;
+  }
+  .skills-icons {
+    display: grid;
+    grid-template-columns: auto auto;
+  }
+  .skill-title {
+    display: none;
+  }
+
+  #contact {
+    margin-top: 50px;
+    margin-right: 50px;
+    width: 100%;
+  }
+  .map {
+    width: 220px;
+    height: 40px;
+    margin: 0 auto;
+  }
+  .addressAnsEmail-contact {
+    display: none;
   }
 }
