--- a/client/src/App.css
+++ b/client/src/App.css
@@ -137,13 +137,14 @@ h5 {
 @media screen and (min-width: 300px) and (max-width: 374px) {
   #about {
     margin-top: 50px;
-
-    width: 70%;
+    margin: 0 auto;
+    width: 100%;
   }
 
   #skills {
     margin-top: 50px;
-    width: 70%;
+    width: 100%;
+    margin: 0 auto;
   }
   .skills-icons {
     display: grid;
